[package]
name = "post-archiver-utils"
version = "0.0.1"
edition = "2024"

[dependencies]
console = "0.16"
log = "0.4"
post-archiver = { version="0.4", features=["importer"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-alpn"] }
reqwest-retry = "0.7"
reqwest-middleware = { version = "0.4", features = ["json"] }
futures = "0.3"
tokio = "1.46.1"
thiserror = "2.0.12"
async-trait = "0.1.88"
http = "1.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
governor = "0.10.0"
