[package]
name = "post-archiver-utils"
version = "0.0.1"
edition = "2024"
license = "BSD-3-Clause"
description = "A set of utilities for Post Archiver"
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/PostArchiverUtils"

[dependencies]
console = "0.16"
log = "0.4"
post-archiver = { version="0.5", features=["importer"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-alpn"] }
reqwest-retry = "0.7"
reqwest-middleware = { version = "0.4", features = ["json"] }
futures = "0.3"
tokio = { version = "1.46", features = ["macros"] }
thiserror = "2"
async-trait = "0.1"
http = "1.3"
serde = "1"
serde_json = "1"
governor = "0.10"
rusqlite = "0.32"
tempfile = "3.22"
